<resources>
    <string name="app_name">NotasAluno</string>
    <string name="ma_et_name_hint">Type your name</string>
    <string name="ma_et_name">Name</string>
    <string name="ma_et_n1">N1</string>
    <string name="ma_et_n2">N2</string>
    <string name="ma_rb_male">Male</string>
    <string name="ma_rb_female">Female</string>
    <string name="ma_bt_register">Register</string>

    <string name="error_etname">Type your name</string>
    <string name="error_etn1">Type the first grade</string>
    <string name="error_etn2">Type the second grade</string>
    <string name="error_rb">Select a gender</string>

</resources>
